tests/bad/methods_no_this.ae
/// fail: static methods not supported yet

struct Foo {}

def Foo::bar() {}